# capillisim

./: .gitignore  LICENSE  README.md  pyproject.toml  work_log.md
.claude/commands/: design-review.md
.stitch/: DESIGN.md
docs/: ARCHITECTURE.md  BUILD_DATASET.md  CALIBRATION.md  COLOR_MATCHING.md  CONNECT_PHONE.md  CREATE_IMAGE.md  DATA_MODEL.md  ESTIMATOR.md  GUIDE.md  HANDOFF.md  HARDWARE.md  POC_OPERATION.md  PRIOR_ART.md  RESEARCH.md  RIG_SETUP.md  ROADMAP.md  SIZING_AND_VIEWING.md
examples/dataset/: README.md  caps.db
src/cap_mosaic/: __init__.py
src/cap_mosaic/app/: __init__.py  ai_edit.py  camera_check.py  cap_capture.py  cap_crop.py  cap_render.py  cap_signature.py  cap_stock.py  card_build.py  cli.py  llm_judge.py  make_card.py  planner_designer.py  repair_capture.py  run_build.py
src/cap_mosaic/core/: __init__.py  estimator.py  geometry.py  legibility.py  matcher.py  palette.py  pattern.py  plan.py
src/cap_mosaic/data/: __init__.py  (+1 more)
tests/: test_ai_edit.py  test_calibrate.py  test_camera_check.py  test_cap_crop.py  test_cap_crop_tight.py  test_cap_render.py  test_cap_stock.py  test_card_capcolor.py  test_card_layout.py  test_card_presence.py  test_card_reader.py  test_card_robust.py  test_color_cast.py  test_estimator.py  test_geometry.py  test_inventory_browser.py  test_legibility.py  test_llm_judge.py  test_measure.py  test_palette.py  test_pattern.py  test_planner.py  test_recent_strip.py  test_render.py  test_repair.py  test_signature.py  test_store.py  test_view_distance.py  test_wb_robust.py  test_webapp.py
tools/: build_example_dataset.py
(+15 files in other folders)
